--- a/rofl-web-gateway.yaml
+++ b/rofl-web-gateway.yaml
@@ -16,7 +16,7 @@ spec:
 apiVersion: networking.istio.io/v1alpha3
 kind: VirtualService
 metadata:
-  name: bookinfo
+  name: rofl-web
 spec:
   hosts:
   - "*"
